= {project-name} Changelog
:project-name: Kramdown AsciiDoc
:uri-repo: https://github.com/asciidoctor/kramdown-asciidoc

This document provides a high-level view of the changes to {project-name} by release.
For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.

== Unreleased

=== Added

* Convert checkbox at start of items in a checklist (#94)

=== Changed

* Upgrade kramdown to 2.4.x

== 2.0.1 (2022-06-29) - @mojavelinux

=== Fixed

* Fix crash when fenced code block is empty and does not specify a language (#93)
* Fix crash when input contains `<script>` tag (#98)
* Fix crash if blockquote ends with nested block (#96)
* Handle text that maps to an abbreviation (#97)
* Handle front matter value that is parsed as a date or datetime (#95)

=== Changed

* Add JRuby 9.3 to CI matrix

=== Details

{url-repo}/releases/tag/v2.0.1[git tag] | {url-repo}/compare/v2.0.0\...v2.0.1[full diff]

== 2.0.0 (2021-07-11) - @mojavelinux

=== Added

* Add support for converting block LaTeX math to stem block
* Add support for converting span LaTeX math to inline stem macro
* Add basic support for footnotes (#74)

=== Fixed

* Use File.read instead of IO.read to suppress magic subprocess behavior
* Enable compatibility with Ruby 3 by declaring rexml as a runtime dependency (#84)
* Don't crash when converting list item that only contains spaces (#83)

=== Changed

* Upgrade kramdown to 2.3.x and declare kramdown-parser-gfm as runtime dependency (#85)
* Don't add source style to listing block when language is specified
* Switch CI to GitHub Actions
* Run test suite in CI environment on Windows and macOS
* Apply style rules to source code

=== Details

{uri-repo}/releases/tag/v2.0.0[git tag] | {uri-repo}/compare/v1.0.1\...v2.0.0[full diff]

== 1.0.1 (2018-11-28) - @mojavelinux

=== Fixed

* Fixed bin script on Ruby 2.3 (#70)

=== Details

{uri-repo}/releases/tag/v1.0.1[git tag] | {uri-repo}/compare/v1.0.0\...v1.0.1[full diff]
