@@ -9,6 +9,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 
 === Added
 
+* Add support for multi-paragraph admonitions (#72)
 * Convert checkbox at start of items in a checklist (#94)
 
 === Changed
